add `-x` to add OS keystore secrets, bypassing the prompt