@@ -42,7 +42,7 @@ public class OpensearchKeystoreCli extends AbstractOpensearchCli {
      * in the command line history). So we have to work around that and provide the value in STDIN.
      */
     public void add(String key, String secretValue) {
-        runWithStdin(Collections.singletonList(secretValue), "add", key);
+        runWithStdin(List.of(secretValue), "add", "-x", key); // -x allows input from stdin, bypassing the prompt
     }
 
     public List<String> list() {
